# vole-act

./: .gitignore  Cargo.toml  README.md  deny.toml  vole-act.aux  vole-act.out
crates/binary-fields/: Cargo.toml
crates/binary-fields/src/: embed.rs  gf16.rs  gf2p128.rs  lib.rs
crates/mayo/: Cargo.toml
crates/mayo/src/: lib.rs  mat.rs  params.rs  scheme.rs
crates/vector-commit/: Cargo.toml
crates/vector-commit/src/: lib.rs
crates/vole-act/: Cargo.toml
crates/vole-act/benches/: protocol.rs
crates/vole-act/examples/: determinism_hash.rs  profile_hotpath.rs  profile_matrix.rs
crates/vole-act/src/: circuit.rs  keccak.rs  lib.rs  protocol.rs  wire.rs
crates/vole-act/src/protocol/: issue.rs  issuer.rs  markers.rs  mod.rs  public_key.rs  spend.rs  store.rs  tests.rs
crates/voleith/: Cargo.toml
crates/voleith/src/: backend.rs  bits.rs  lib.rs  proof.rs  transcript.rs  vole.rs
crates/voleith/tests/: nizk.rs
docs/: BENCHMARKS.md  DESIGN.md  IMPLEMENTATION.md  SECURITY.md  vole-act.tex
fuzz/: Cargo.toml  README.md
fuzz/dictionaries/: wire.dict
fuzz/fuzz_targets/: common.rs  corner_cases.rs  proof_verify.rs  protocol_artifacts.rs  protocol_state.rs  wire_decode.rs
research/mayo-assumption-review/: index.md  sources.md
research/mayo-assumption-review/data/: check_corpus.py
research/mayo-assumption-review/design-options/: index.md  oracle-model.md
research/mayo-assumption-review/design-options/data/: compare_current_profiles.py  criterion-2026-07-21.json  current_wrapper_snapshot.json  mayo_rejection_bound.py  mayo_rejection_bound_output.txt  output.txt
research/mayo-assumption-review/paper-analysis/: index.md  mayo-foundations.md  plain-vs-one-more.md  translation-test.md
research/mayo-assumption-review/protocol-oracle/: head-vs-working-tree.md  implemented-oracles.md  index.md  lineage-accounting.md  repeats-races-state.md
research/mayo-assumption-review/reduction/: classical-rom-simulator.md  distribution-and-losses.md  fiscal-to-fresh-target.md  index.md  model-boundaries.md  salted-wrapper-proof-plan.md
research/mayo-assumption-review/reduction/data/: mayo2_rejection_bound.py  mayo2_rejection_bound.txt  salted_wrapper_loss.py  salted_wrapper_loss.txt
