[workspace]
resolver = "3"
members = [
    "crates/binary-fields",
    "crates/vector-commit",
    "crates/voleith",
    "crates/mayo",
    "crates/vole-act",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
binary-fields = { path = "crates/binary-fields" }
vector-commit = { path = "crates/vector-commit" }
voleith = { path = "crates/voleith" }
mayo = { path = "crates/mayo" }

# External
rand_core = "0.6.4"
rayon = "1"
# The `asm` feature enables the ARMv8.2-SHA3 hardware Keccak permutation on
# aarch64 (runtime-detected; other targets keep the portable code). Same
# permutation output; the dispatch branch depends only on CPU capability,
# never on secret data.
sha3 = { version = "0.10", features = ["asm"] }
zeroize = "1.8"

# Dev
proptest = "1"
hex = "0.4"

[workspace.lints.rust]
missing_docs = "warn"

[profile.release]
lto = "thin"

# Keep the crypto fast even in debug test runs.
[profile.dev.package.sha3]
opt-level = 3

[profile.dev.package.binary-fields]
opt-level = 3

[profile.dev.package.vector-commit]
opt-level = 3

[profile.dev.package.voleith]
opt-level = 3

[profile.dev.package.mayo]
opt-level = 3

[profile.dev.package.vole-act]
opt-level = 3

[profile.bench]
debug = true
