[package]
name = "vole-act"
description = "Post-quantum anonymous credit tokens from VOLE-in-the-head and MAYO"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
binary-fields = { workspace = true }
vector-commit = { workspace = true }
voleith = { workspace = true }
mayo = { workspace = true }
rand_core = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
rand = "0.8"

[lints]
workspace = true
