[package]
name = "vole-act"
description = "Post-quantum anonymous credit tokens from VOLE-in-the-head and MAYO"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
binary-fields = { workspace = true }
vector-commit = { workspace = true }
voleith = { workspace = true }
mayo = { workspace = true }
rand_core = { workspace = true }
sha3 = { workspace = true }
zeroize = { workspace = true }

[features]
default = ["parallel"]
# Forwarded to voleith: GGM tree expansion/reconstruction on the rayon
# pool. Disable for a single-threaded build (identical transcripts).
parallel = ["voleith/parallel"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "protocol"
harness = false

[lints]
workspace = true
