[package]
name = "voleith"
description = "VOLE-in-the-head zero-knowledge proofs (QuickSilver-style, Fiat-Shamir)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
binary-fields = { workspace = true }
vector-commit = { workspace = true }
rand_core = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
rand = "0.8"

[lints]
workspace = true
