[package]
name = "voleith"
description = "VOLE-in-the-head zero-knowledge proofs (QuickSilver-style, Fiat-Shamir)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
binary-fields = { workspace = true }
vector-commit = { workspace = true }
rand_core = { workspace = true }
rayon = { workspace = true, optional = true }
sha3 = { workspace = true }
zeroize = { workspace = true }

[features]
default = ["parallel"]
# Expand/reconstruct the τ GGM trees on the rayon global (or installed)
# thread pool. The sequential fallback is transcript-identical; issuers
# optimizing for throughput over single-request latency may prefer it, or
# may scope the pool per request via `rayon::ThreadPool::install`.
parallel = ["dep:rayon"]

[dev-dependencies]
rand = "0.8"

[lints]
workspace = true
